Añadido utilidades 3.0 porfa

--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraDAL/Trabajo-DEINT-PasapalabraDAL.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraDAL/Trabajo-DEINT-PasapalabraDAL.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Trabajo_DEINT_PasapalabraDAL</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
 </Project>
