--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraDAL/Trabajo-DEINT-PasapalabraDAL.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraDAL/Trabajo-DEINT-PasapalabraDAL.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Trabajo-DEINT-PasapalabraEntities\Trabajo-DEINT-PasapalabraEntities.csproj" />
+  </ItemGroup>
+
 </Project>
