--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraDAL/obj/
 Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraBL/obj/
 
 Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-Pasapalabra_Entities/obj/
+/.idea/.idea.folder.dir/.idea/workspace.xml
+/.idea/.idea.folder.dir/.idea/projectSettingsUpdater.xml
