--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraBL/obj/
 Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-Pasapalabra_Entities/obj/
 /.idea/.idea.folder.dir/.idea/workspace.xml
 /.idea/.idea.folder.dir/.idea/projectSettingsUpdater.xml
+slnx.sqlite
