--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-Pasapalabra_Entities/obj/
 /.idea/.idea.folder.dir/.idea/workspace.xml
 /.idea/.idea.folder.dir/.idea/projectSettingsUpdater.xml
 slnx.sqlite
+/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/bin
