--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
@@ -142,8 +142,8 @@
     <Content Include="Assets\Images\fondo_pasapalabra.jpeg" />
     <Content Include="Assets\Images\micro1.png" />
     <Content Include="Assets\Images\micro2.png" />
-    <Content Include="Assets\Sounds\correct.mp3" />
-    <Content Include="Assets\Sounds\Wrong.mp3" />
+    <Content Include="Assets\correct.mp3" />
+    <Content Include="Assets\Wrong.mp3" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
