--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
@@ -121,7 +121,7 @@
     </Compile>
     <Compile Include="Models\clsModelPregunta.cs" />
     <Compile Include="Utils\clsCircularPanel.cs" />
-    <Compile Include="Utils\Converters\clsColorToBrushConverter.cs" />
+    <Compile Include="Utils\Converters\clsBoolToVisibilityConverter.cs" />
     <Compile Include="Utils\clsVMBase.cs" />
     <Compile Include="Utils\DelegateCommand.cs" />
     <Compile Include="ViewModels\clsGamePageVM.cs" />
@@ -132,6 +132,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\UsersControlls\PreguntaFalladaControl.xaml.cs">
+      <DependentUpon>PreguntaFalladaControl.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -165,6 +168,10 @@
     <Page Include="Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\UsersControlls\PreguntaFalladaControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
