--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Utils\clsVMBase.cs" />
     <Compile Include="Utils\DelegateCommand.cs" />
     <Compile Include="ViewModels\clsGamePageVM.cs" />
+    <Compile Include="ViewModels\clsRankingVM.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -132,6 +133,9 @@
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Ranking.xaml.cs">
+      <DependentUpon>Ranking.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UsersControlls\LetraControl.xaml.cs">
       <DependentUpon>LetraControl.xaml</DependentUpon>
     </Compile>
@@ -172,6 +176,10 @@
     <Page Include="Views\GamePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Ranking.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UsersControlls\LetraControl.xaml">
       <SubType>Designer</SubType>
