--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Trabajo-DEINT-PasapalabraUI.csproj
@@ -154,6 +154,7 @@
     <Content Include="Assets\Images\micro2.png" />
     <Content Include="Assets\correct.mp3" />
     <Content Include="Assets\Images\volumen.png" />
+    <Content Include="Assets\bgMusic.mp3" />
     <Content Include="Assets\Wrong.mp3" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
